--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ language: python
 python:
   - "2.7"
   - "3.6"
+before_install:
+  # install pip
+  - "pip install -U pip"
+  # install pyhere so it can be tested
+  - "python setup.py install"
 # command to install dependencies
 install:
   - pip install -r requirements.txt
